tests/errors/test_pragma_invalid_value.mob
// Test pragma with invalid value

#pragma override_behavior invalid_value
print("Should not reach here");

